ui/apps/io.ox/mail/style.less
/* ... */
.io-ox-mail-window .list-view-control.toolbar-top-visible .toolbar.top,
.io-ox-mail-window .list-view-control.toolbar-bottom-visible .toolbar.bottom {
    display: flex;
    // button label ellipsis
    .dropdown {
        // disable flexbox auto calculation
        min-width: 0;
        // pull right
        &.margin-auto {
            margin-left: auto;
        }
        & > a {
            display: flex;
            align-items: baseline;
            span { .ellipsis(); }
            padding-left: 16px;
        }
    }
    // toolbar elements won't shrink
    & > *:not('.dropdown') {
        min-width: 0;
        flex: 0 0 auto;
        padding-right: 8px;
    }
}

.list-item.small {
    padding-top: 7px;
    padding-bottom: 7px;

    .list-item-checkmark .fa.fa-checkmark { top: 8px; }
}

.list-item.small .list-item-content,
.thread-view .list-item.small {
    display: table;
    width: 100%;
    table-layout: fixed;
}

.mail-item {

    .list-item {
        padding-top: 11px;
        padding-bottom: 12px;

        .smartphone & {
            padding-top: 16px;
            padding-bottom: 15px;
            .list-item-checkmark { top: 9px; }
        }
    }

    .list-item-column {
        display: table-cell;
        vertical-align: middle;
        padding: 0;
        @icon-width: 24px;

        &.column-1 { width: @icon-width; text-align: center; }
        &.column-2 { width: @icon-width; text-align: center; }
        &.column-3 { width: @icon-width; text-align: center; }
        &.column-4 { width: 176px; padding-right: 8px; }
        &.column-5 { width: @icon-width; text-align: center; }
        &.column-6 { width: 90%; padding-right: 8px; .ellipsis; }
        &.column-7 { width: 136px; text-align: right; }
    }

    &.list-view .list-item {

        &.small {

            .priority { float: none; }

            .from span.person { font-weight: normal; }

            .subject {
                display: inline;
                margin-right: 16px;
            }

            .drag-title { opacity: 1; }

            .date {
                display: block;
                float: none;
                .ellipsis();
            }

            &.unread {
                .from span.person, .subject, .date { font-weight: bold; }
            }
        }

        &.unread {
            .date { opacity: 1; font-weight: bold; color: #000; }
        }
    }
}

// macos and ios specific styles
html.macos .preview-right, html.ios {
    .mail-item.list-view .list-item .from .person {
        font-weight: 700;
    }
    .mail-item.list-view .list-item.unread .from .person {
        font-weight: 800;
        color: #000;
    }
    .mail-item.list-view.has-focus .list-item.unread.selected .from .person {
        color: #fff;
    }
}

.swipe-option-cell {
    position: absolute;
    width: 100%;
    right: 0;
    z-index: -5;

    .swipe-button {
        display: flex;
        align-content: center;
        justify-content: center;
        flex-direction: column;
        text-align: center;
        height: 100%;
        width: 95px;
        color:#fff;
        font-size: 30px;
        float: right;
        transition: width .35s ease-in-out;
        i { transition: opacity .3s; }
        &.delete { background: #FF4105; }
        &.more   {
            background: rgb(255, 169, 8);
            i { opacity: 1; }
        }
    }
}

.list-view.thread-view .list-item.small { padding: 7px 14px 7px 48px; }
/* ... */

