Fixed: Bug 68573 - Email subject has white color on white background on mobile with select mode enabled
- previous fix broke styles both on macOS and iOS
- added proper selector to macos/ios specific styles
- only added selector to relevant styles instead of all of them

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -267,7 +267,7 @@ html.macos .preview-right, html.ios {
         font-weight: 800;
         color: #000;
     }
-    .mail-item.list-view.has-focus .list-item.unread.selected .from .person {
+    .visible-selection.mail-item.list-view.has-focus .list-item.unread.selected .from .person {
         color: #fff;
     }
 }
